--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>casadi_mpc</name>
+  <name>casadi_mpc1</name>
   <version>0.1.0</version>
   <description>ROS1 package for CasADi-based Model Predictive Control</description>
 
